<resources>
    <string name="app_name">FlexyPixel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_level_configure">CONFIGURE</string>
    <string name="display_level_your_display">your display</string>

    <string name="template_1">TEMPLATE #1</string>
    <string name="tap_to_change">tap to change</string>
    <string name="save">Save</string>
    <string name="connect">CONNECT</string>
    <string name="your_device">your device</string>
    <string name="choose">CHOOSE</string>
    <string name="an_option">an option</string>
    <string name="create">CREATE</string>
    <string name="new_scheme">new scheme</string>
    <string name="saved_scheme">saved scheme</string>
    <string name="template">template</string>
    <string name="drawing">DRAWING</string>
    <string name="mode">mode</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="saved">SAVED</string>
    <string name="schemes">schemes</string>

</resources>