<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.DisplayLevelFragment">

    <EditText
        android:id="@+id/heading"
        style="@style/Heading_ET"
        android:hint="@string/template_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/subtitle"
        style="@style/Subtitle_TV"
        android:text="@string/tap_to_change"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        />

    <GridLayout
        android:id="@+id/display_layout"
        style="@style/GridLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/subtitle">

        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card1"
            style="@style/neumorph_card_flat"
            />
        

        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card2"
            style="@style/neumorph_card_flat"
            />
        

        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card3"
            style="@style/neumorph_card_flat"
            />
        

        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card4"
            style="@style/neumorph_card_flat"
            />
        


        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card5"
            style="@style/neumorph_card_flat"
            />
        

        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card6"
            style="@style/neumorph_card_flat"
            />
        
        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card7"
            style="@style/neumorph_card_flat"
            />
        
        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card8"
            style="@style/neumorph_card_flat"
            />
        
        
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card9"
            style="@style/neumorph_card_flat"
            />
        



    </GridLayout>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/display_holder"
        style="@style/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/save"
        >


    </soup.neumorphism.NeumorphButton>

</androidx.constraintlayout.widget.ConstraintLayout>